[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv2latexpdfs"
version = "0.1.0"
description = "Generate PDF files from CSV files with LaTeX templates"
authors = [{ name = "Alexandre Esse", email = "alexandre.esse.dev@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
csv2latexpdfs = "csv2latexpdfs:main"
